# vim

./: .gitignore  CMakeLists.txt  README.md  main.cc  residual_echo_detector.cc  residual_echo_detector.h  residual_echo_detector_unittest.cc  wavreader.c  wavreader.h  wavwriter.c  wavwriter.h
common_audio/: CMakeLists.txt  audio_util.cc  rtc_histogram.cc  rtc_histogram.h
common_audio/include/: audio_util.h
echo_detector/: CMakeLists.txt  circular_buffer.cc  circular_buffer.h  circular_buffer_unittest.cc  mean_variance_estimator.cc  mean_variance_estimator.h  mean_variance_estimator_unittest.cc  moving_max.cc  moving_max.h  moving_max_unittest.cc  normalized_covariance_estimator.cc  normalized_covariance_estimator.h  normalized_covariance_estimator_unittest.cc
include/: audio_processing.h
logging/: apm_data_dumper.cc  apm_data_dumper.h
